(02/09/14)
*** Handling of [*] and . has changed. [*] has been broken for several
    Swift releases, but now has some approximation of its former behaviour,
    in a cleaner implementation.
    [*] is now an identity operation, that is array[*] == array.
    The structure access operator . can now take an array on the left
    hand side. In situations where a[*].img was used, it is permissible
    to continue to write a[*].img, or to write a.img - both of these will
    return an array of img elements.

(02/09/09)
*** Procedure invocations can be made in any expression context now, rather
    than only directly in an assignment.

*** Mappings can now be made in any declaration, whether it has an assignment
    or not. Previous a procedure call assignment and a mapping could not be
    made in the same statement.

(02/05/09)
*** TIghter type checking on app blocks. Primitive types and arrays of
    primitive types are permitted. Other types are prohibited.

*** Arrays of primitive types can be passed to app blocks, and will be
    expanded into multiple command-line parameters, one parameter per
    array element.

(01/23/09)
*** Swift 0.8 built from Swift SVN r2448 and cog SVN r2261

(01/14/09)
*** Application success/failure status reporting can now be done using
    CoG provider status, rather than the previous only choice of
    using status files on the shared file system. A status.mode parameter
    has been added to set this. It can be configured either in the
    swift.properties file, to have effect for all sites, or can be set
    per-site.

(01/10/09)
*** Console output for individual application invocation start and finish
    is no longer shown. The progress ticker now appears more often.
    This should give a better overview of run progress.

*** More parallelisation of execution, so that some constructs which should
    have always work now actually work. For example, mappers can take